johan subio la navegacion

--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>actividad en conjunto</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <nav class="navegacion">
+        <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Contacto</a></li>
+            <li><a href="#">Sobre my</a></li>
+            <li><a href="#">Servicio</a></li>
+        </ul>
+   </nav>
 </body>
 </html>
