subi mi trabajo terminado

--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>soy kircy
-    </h1>
+     <div class="card">
+        <img src="foto1.jpg" alt="Tu Foto" class="card-image">
+        <div class="card-content">
+            <h2 class="card-name">Nombre de la Persona</h2>
+            <p class="card-description">Esta es una breve descripción sobre la persona o la foto. Puedes poner detalles interesantes o una pequeña biografía aquí.</p>
+        </div>
+    </div>
 </body>
 </html>
