johan subi su card

--- a/index.html
+++ b/index.html
@@ -15,5 +15,14 @@
             <li><a href="#">Servicio</a></li>
         </ul>
    </nav>
+
+   <div class="card">
+        <img src="WIN_20250427_15_23_09_Pro.jpg" alt="Tu Foto" class="card-image">
+        <div class="card-content">
+            <h2 class="card-name">JOHAN SILVERIO</h2>
+            <p class="card-description">ESTA ES LA CARD DE JOHAN SILVERIO</p>
+        </div>
+    </div>
+
 </body>
 </html>
