actualizando nueva vez

--- a/index.html
+++ b/index.html
@@ -3,26 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>actividad en conjunto</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <nav class="navegacion">
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Contacto</a></li>
-            <li><a href="#">Sobre my</a></li>
-            <li><a href="#">Servicio</a></li>
-        </ul>
-   </nav>
-
-   <div class="card">
+     <div class="card">
         <img src="WIN_20250427_15_23_09_Pro.jpg" alt="Tu Foto" class="card-image">
         <div class="card-content">
-            <h2 class="card-name">JOHAN SILVERIO</h2>
-            <p class="card-description">ESTA ES LA CARD DE JOHAN SILVERIO</p>
+            <h2 class="card-name">Nombre de la Persona</h2>
+            <p class="card-description">Esta es una breve descripción sobre la persona o la foto. Puedes poner detalles interesantes o una pequeña biografía aquí.</p>
         </div>
     </div>
-
 </body>
 </html>
