creo que lo entiendo no puedo subir el mismo codigo que pueda sobrecribir las rama main

--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-   <div class="card">
-        <img src="WIN_20250427_15_23_09_Pro.jpg" alt="Tu Foto" class="card-image">
-        <div class="card-content">
-            <h2 class="card-name">Tu Nombre (Ej. Johan)</h2>
-            <p class="card-description">¡Hola! Soy Johan, me encanta el desarrollo web y estoy aprendiendo mucho sobre Git y GitHub.</p>
-        </div>
-    </div>
+<body>  
+ <section class="nueva-seccion-card">
+        <div class="card card-johan-especial">
+            <img src="WIN_20250427_15_23_09_Pro.jpg" alt="Foto de Johan" class="card-image">
+            <div class="card-content">
+                <h2 class="card-name">Johan, el Colaborador</h2>
+                <p class="card-description">¡Esta es mi nueva tarjeta en una sección separada! Estoy aprendiendo a usar Git de forma eficiente.</p>
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
