Resolviendo conflictos de fusión: integradas ambas cards y CSS de nueva seccion

--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Perfil Colaborativo</title> <link rel="stylesheet" href="style.css">
 </head>
-<body>  
- <section class="nueva-seccion-card">
+<body>
+    <div class="card">
+        <img src="foto1.jpg" alt="Tu Foto" class="card-image">
+        <div class="card-content">
+            <h2 class="card-name">Nombre de la Persona</h2>
+            <p class="card-description">Esta es una breve descripción sobre la persona o la foto. Puedes poner detalles interesantes o una pequeña biografía aquí.</p>
+        </div>
+    </div>
+
+    <section class="nueva-seccion-card">
         <div class="card card-johan-especial">
             <img src="WIN_20250427_15_23_09_Pro.jpg" alt="Foto de Johan" class="card-image">
             <div class="card-content">
